feat(container): add styles for container

--- a/index.html
+++ b/index.html
@@ -8,5 +8,16 @@
         <link rel="stylesheet" href="grid.css" />
         <link rel="stylesheet" href="styles.css" />
     </head>
-    <body></body>
+    <body>
+        <div class="container" style="background: orange">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam possimus ipsam ducimus, nam vero
+            cupiditate dicta fugiat cum, molestias praesentium laudantium labore sequi. Esse, eum omnis culpa voluptate
+            placeat minima ducimus. Placeat itaque ipsam corporis doloribus similique dolor, optio voluptate laborum et
+            voluptatum libero? Sed facilis veritatis et ullam officia cum dolorum fugiat veniam maiores atque
+            consequuntur aperiam nesciunt quisquam hic consectetur, non dolor iusto debitis eveniet blanditiis dolorem.
+            Odit nobis, architecto natus expedita dolores aliquid dolorem ipsam, optio deleniti asperiores, ipsum quod
+            assumenda sequi minima cumque praesentium quaerat quis alias. Vero consequuntur recusandae sapiente tempore
+            illo perspiciatis dolores doloremque.
+        </div>
+    </body>
 </html>
