feat(row): add styles for row

--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
         <link rel="stylesheet" href="styles.css" />
     </head>
     <body>
-        <div class="container" style="background: orange">
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam possimus ipsam ducimus, nam vero
-            cupiditate dicta fugiat cum, molestias praesentium laudantium labore sequi. Esse, eum omnis culpa voluptate
-            placeat minima ducimus. Placeat itaque ipsam corporis doloribus similique dolor, optio voluptate laborum et
-            voluptatum libero? Sed facilis veritatis et ullam officia cum dolorum fugiat veniam maiores atque
-            consequuntur aperiam nesciunt quisquam hic consectetur, non dolor iusto debitis eveniet blanditiis dolorem.
-            Odit nobis, architecto natus expedita dolores aliquid dolorem ipsam, optio deleniti asperiores, ipsum quod
-            assumenda sequi minima cumque praesentium quaerat quis alias. Vero consequuntur recusandae sapiente tempore
-            illo perspiciatis dolores doloremque.
+        <div class="container">
+            <div class="row">
+                <div class="item">Item 1</div>
+                <div class="item">Item 2</div>
+                <div class="item">Item 3</div>
+                <div class="item">Item 4</div>
+                <div class="item">Item 5</div>
+                <div class="item">Item 6</div>
+            </div>
         </div>
     </body>
 </html>
