--- a/index.html
+++ b/index.html
@@ -10,23 +10,23 @@
     </head>
     <body>
         <div class="container">
-            <div class="row row-cols-lg-4 row-cols-md-3 row-cols-sm-2 row-cols-1">
-                <div class="col">
+            <div class="row">
+                <div class="col col-lg-3 col-md-4 col-sm-6 col-12">
                     <div class="item">Item 1</div>
                 </div>
-                <div class="col">
+                <div class="col col-lg-3 col-md-4 col-sm-6 col-12">
                     <div class="item">Item 2</div>
                 </div>
-                <div class="col">
+                <div class="col col-lg-3 col-md-4 col-sm-6 col-12">
                     <div class="item">Item 3</div>
                 </div>
-                <div class="col">
+                <div class="col col-lg-3 col-md-4 col-sm-6 col-12">
                     <div class="item">Item 4</div>
                 </div>
-                <div class="col">
+                <div class="col col-lg-3 col-md-4 col-sm-6 col-12">
                     <div class="item">Item 5</div>
                 </div>
-                <div class="col">
+                <div class="col col-lg-3 col-md-4 col-sm-6 col-12">
                     <div class="item">Item 6</div>
                 </div>
             </div>
