--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <div class="container">
-            <div class="row">
+            <div class="row g-0">
                 <div class="col col-lg-3 col-md-4 col-sm-6 col-12">
                     <div class="item">Item 1</div>
                 </div>
