--- a/index.html
+++ b/index.html
@@ -10,24 +10,50 @@
     </head>
     <body>
         <div class="container">
-            <div class="row g-0">
-                <div class="col col-lg-3 col-md-4 col-sm-6 col-12">
-                    <div class="item">Item 1</div>
+            <!-- Row 1 -->
+            <div class="row">
+                <div class="col">
+                    <div class="card">1</div>
                 </div>
-                <div class="col col-lg-3 col-md-4 col-sm-6 col-12">
-                    <div class="item">Item 2</div>
+                <div class="col">
+                    <div class="card">2</div>
                 </div>
-                <div class="col col-lg-3 col-md-4 col-sm-6 col-12">
-                    <div class="item">Item 3</div>
+                <div class="col">
+                    <div class="card">3</div>
                 </div>
-                <div class="col col-lg-3 col-md-4 col-sm-6 col-12">
-                    <div class="item">Item 4</div>
+                <div class="col">
+                    <div class="card">4</div>
                 </div>
-                <div class="col col-lg-3 col-md-4 col-sm-6 col-12">
-                    <div class="item">Item 5</div>
+                <div class="col">
+                    <div class="card">5</div>
                 </div>
-                <div class="col col-lg-3 col-md-4 col-sm-6 col-12">
-                    <div class="item">Item 6</div>
+                <div class="col">
+                    <div class="card">6</div>
+                </div>
+                <div class="col">
+                    <div class="card">7</div>
+                </div>
+                <div class="col">
+                    <div class="card">8</div>
+                </div>
+                <div class="col">
+                    <div class="card">9</div>
+                </div>
+                <div class="col">
+                    <div class="card">10</div>
+                </div>
+                <div class="col">
+                    <div class="card">11</div>
+                </div>
+                <div class="col">
+                    <div class="card">12</div>
+                </div>
+            </div>
+
+            <!-- Row 2 -->
+            <div class="row">
+                <div class="col-lg-12 offset-lg-0 col-md-4 offset-md-4 col-sm-2 offset-0">
+                    <div class="card active">1</div>
                 </div>
             </div>
         </div>
