fix: fix some bugs

--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
     </head>
     <body>
         <div class="container">
-            <!-- Row 1 -->
-            <div class="row">
+            <div class="row row-cols-lg-5 row-cols-md-4 row-cols-sm-3 row-cols-2">
                 <div class="col">
                     <div class="card">1</div>
                 </div>
@@ -47,13 +46,6 @@
                 </div>
                 <div class="col">
                     <div class="card">12</div>
-                </div>
-            </div>
-
-            <!-- Row 2 -->
-            <div class="row">
-                <div class="col-lg-12 offset-lg-0 col-md-4 offset-md-4 col-sm-2 offset-0">
-                    <div class="card active">1</div>
                 </div>
             </div>
         </div>
